--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -22,7 +22,8 @@
             android:id="@+id/accountsCloseIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:padding="@dimen/_10sdp"
             android:src="@drawable/ic_close" />
 
         <LinearLayout
@@ -132,7 +133,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -182,5 +183,5 @@
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
