--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -7,7 +7,7 @@
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
-    tools:context=".view.UserDetailsActivity">
+    tools:context=".view.PreferencesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
