--- a/app/src/main/res/layout/activity_select_payment_method.xml
+++ b/app/src/main/res/layout/activity_select_payment_method.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fitsSystemWindows="true"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
     tools:context=".view.business.SelectPaymentMethodActivity">
 
     <include
