--- a/app/src/main/res/layout/under_review_error_msg_dialog.xml
+++ b/app/src/main/res/layout/under_review_error_msg_dialog.xml
@@ -1,10 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@drawable/roundeddialog"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="@dimen/_21sdp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
+            <View
+                android:layout_width="@dimen/_65sdp"
+                android:layout_height="@dimen/_3sdp"
+                android:layout_gravity="center"
+                android:background="@drawable/shape_green_round_rect" />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/not_available"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:lineHeight="@dimen/_26sdp"
+            android:fontFamily="@font/opensans_semibold"
+            android:text="@string/not_available_description"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/okCV"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_44sdp"
+            android:layout_marginTop="@dimen/_60sdp"
+            android:layout_marginBottom="@dimen/_42sdp"
+            app:cardBackgroundColor="@color/primary_green"
+            app:cardCornerRadius="@dimen/_22sdp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/opensans_bold"
+                android:text="@string/ok"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_12ssp" />
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 </LinearLayout>
