--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -1137,7 +1137,7 @@
                     android:text="I agree to "
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/tosTV"
@@ -1147,7 +1147,7 @@
                     android:text="@string/termsservice"
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -1156,7 +1156,7 @@
                     android:text=" &amp; "
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/privacyTV"
@@ -1166,17 +1166,18 @@
                     android:text="@string/privay_policy"
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/spannableTV"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_40sdp"
                     android:layout_marginBottom="@dimen/_30sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="gone" />
+                    android:visibility="visible"
+                    android:lines="3"/>
             </LinearLayout>
 
 
