--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -204,6 +204,7 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
+                            android:id="@+id/lyExpiry"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/_5sdp"
