--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -193,8 +193,7 @@
                             android:paddingLeft="@dimen/_11sdp"
                             android:paddingTop="@dimen/_8sdp"
                             android:paddingRight="@dimen/_11sdp"
-                            android:paddingBottom="@dimen/_11sdp"
-                            >
+                            android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -525,9 +524,9 @@
                                 android:id="@+id/withBankBanknameTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="end"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
+                                android:gravity="end"
                                 android:singleLine="true"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
@@ -773,6 +772,32 @@
                             android:textSize="@dimen/_9ssp" />
 
                     </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cvCancelWB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_27sdp"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:layout_marginRight="@dimen/_27sdp"
+                    android:layout_marginBottom="@dimen/_46sdp"
+                    android:gravity="center"
+                    android:padding="@dimen/_10sdp"
+                    android:visibility="gone"
+                    app:cardBackgroundColor="#00a6a2"
+                    app:cardCornerRadius="@dimen/_20sdp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:paddingTop="@dimen/_13sdp"
+                        android:paddingBottom="@dimen/_13sdp"
+                        android:text="Cancel Transaction"
+                        android:textColor="@color/white" />
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </ScrollView>
