--- a/app/src/main/res/layout/seekbar_with_floating_text.xml
+++ b/app/src/main/res/layout/seekbar_with_floating_text.xml
@@ -19,6 +19,7 @@
         android:layout_below="@+id/tv_floating_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="35dp"
+        android:progressBackgroundTint="@color/vlight_gray"
         android:layout_marginEnd="35dp"
         android:max="24"
         android:textSize="12sp" />
