--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_11sdp"
             android:layout_marginRight="@dimen/_11sdp"
+            android:gravity="center"
             android:orientation="vertical">
 
 
@@ -63,15 +64,9 @@
                 android:id="@+id/timezoneRL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_22sdp">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginEnd="@dimen/_15sdp"
-                    android:src="@drawable/ic_down" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/timeZoneTIL"
@@ -85,6 +80,10 @@
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_color"
+                    app:endIconDrawable="@drawable/ic_down"
+                    app:endIconMode="custom"
+                    app:endIconTint="@color/primary_black"
+                    app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
                     app:hintTextColor="@color/black">
 
@@ -245,7 +244,6 @@
                         android:clickable="true"
                         app:boxCornerRadiusTopStart="@dimen/_10sdp"
                         app:boxStrokeColor="@color/primary_color"
-
                         app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_color"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -276,7 +274,6 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
                 </RelativeLayout>
-
             </RelativeLayout>
 
         </LinearLayout>
