--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -6,19 +6,18 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/_27sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.ConfirmPasswordActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/_30sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@id/cardNextbtn"
-            android:layout_alignParentTop="true"
+            android:fitsSystemWindows="true"
             android:orientation="vertical">
 
             <LinearLayout
@@ -58,101 +57,126 @@
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/currentPassTIL"
-                style="@style/TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_22sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                android:hint="Current Password"
-                android:textColorHint="@color/black"
-                app:boxStrokeColor="@color/primary_green"
-                app:endIconDrawable="@drawable/ic_eyeclose"
-                app:endIconMode="custom"
-                app:errorIconDrawable="@null"
-                app:errorTextColor="@color/error_red"
-                app:expandedHintEnabled="false"
-                app:hintTextColor="@color/primary_green"
-                app:passwordToggleEnabled="true">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/currentPassET"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:longClickable="false"
-                    android:maxLength="12"
-                    android:maxLines="1"
-                    android:padding="@dimen/_14sdp"
-                    android:textColor="@color/text_color"
-                    android:textColorHint="@color/light_gray"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textIsSelectable="false"
-                    android:textSize="@dimen/_12ssp" />
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/cardNextbtn"
+                    android:scrollbars="none">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/layoutPwdError"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/currentPassTIL"
+                            style="@style/TextInputLayout.OutlinedBox"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_21sdp"
+                            android:layout_marginTop="@dimen/_22sdp"
+                            android:layout_marginEnd="@dimen/_21sdp"
+                            android:hint="Current Password"
+                            android:textColorHint="@color/black"
+                            app:boxStrokeColor="@color/primary_green"
+                            app:endIconDrawable="@drawable/ic_eyeclose"
+                            app:endIconMode="custom"
+                            app:errorIconDrawable="@null"
+                            app:errorTextColor="@color/error_red"
+                            app:expandedHintEnabled="false"
+                            app:hintTextColor="@color/primary_green"
+                            app:passwordToggleEnabled="true">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_erro" />
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/currentPassET"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:imeOptions="actionDone"
+                                android:inputType="textPassword"
+                                android:longClickable="false"
+                                android:maxLength="12"
+                                android:maxLines="1"
+                                android:padding="@dimen/_14sdp"
+                                android:textColor="@color/text_color"
+                                android:textColorHint="@color/light_gray"
+                                android:textCursorDrawable="@drawable/cursor_color"
+                                android:textIsSelectable="false"
+                                android:textSize="@dimen/_12ssp" />
 
-                <TextView
-                    android:id="@+id/tvPwdError"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/error_red"
-                    android:textSize="@dimen/_12ssp" />
-            </LinearLayout>
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layoutPwdError"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_21sdp"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginEnd="@dimen/_21sdp"
+                            android:orientation="horizontal"
+                            android:visibility="gone">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_erro" />
+
+                            <TextView
+                                android:id="@+id/tvPwdError"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_10sdp"
+                                android:fontFamily="@font/opensans_regular"
+                                android:textColor="@color/error_red"
+                                android:textSize="@dimen/_12ssp" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </ScrollView>
+
+                <LinearLayout
+                    android:id="@+id/cardNextbtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_48sdp"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/saveBtnCV"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_43sdp"
+                        android:layout_marginStart="@dimen/_21sdp"
+                        android:layout_marginEnd="@dimen/_21sdp"
+                        app:cardBackgroundColor="@color/inactive_color"
+                        app:cardCornerRadius="@dimen/_21sdp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_bold"
+                            android:gravity="center"
+                            android:paddingTop="@dimen/_14sdp"
+                            android:text="Next"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_12ssp" />
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/cardNextbtn"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_48sdp"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/saveBtnCV"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_43sdp"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                app:cardBackgroundColor="@color/inactive_color"
-                app:cardCornerRadius="@dimen/_21sdp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_bold"
-                    android:gravity="center"
-                    android:paddingTop="@dimen/_14sdp"
-                    android:text="Next"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
