--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/et_bg_gray"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.EditCardActivity">
@@ -34,8 +34,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_chevron_left"
-                    android:contentDescription="@string/back_button"/>
+                    android:contentDescription="@string/back_button"
+                    android:src="@drawable/ic_chevron_left" />
             </LinearLayout>
 
             <TextView
@@ -47,7 +47,7 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:text="@string/visa_debit_8765"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp"/>
+                android:textSize="@dimen/_11ssp" />
         </RelativeLayout>
 
     </RelativeLayout>
@@ -56,6 +56,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/layoutHead"
+        android:background="@color/et_bg_gray"
         android:fillViewport="true"
         android:scrollbars="none">
 
@@ -101,11 +102,11 @@
                             android:layout_height="wrap_content"
                             android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                            android:ellipsize="end"
                             android:focusable="false"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
-                            android:ellipsize="end"
                             android:maxEms="21"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
@@ -181,8 +182,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro"
-                            android:contentDescription="@string/error_code"/>
+                            android:contentDescription="@string/error_code"
+                            android:src="@drawable/ic_erro" />
 
                         <TextView
                             android:id="@+id/expiryErrorTV"
@@ -198,7 +199,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:background="@color/viewcolor"/>
+                        android:background="@color/viewcolor" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/etlAddress1"
@@ -249,8 +250,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro"
-                            android:contentDescription="@string/error_code"/>
+                            android:contentDescription="@string/error_code"
+                            android:src="@drawable/ic_erro" />
 
                         <TextView
                             android:id="@+id/address1ErrorTV"
@@ -275,8 +276,7 @@
                         app:boxCornerRadiusTopEnd="12dp"
                         app:boxCornerRadiusTopStart="12dp"
                         app:boxStrokeColor="@color/primary_green"
-                        app:hintTextColor="@color/primary_green"
-                        >
+                        app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/etAddress2"
@@ -293,8 +293,8 @@
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
-                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -329,8 +329,8 @@
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_12ssp"
-                            android:textCursorDrawable="@drawable/cursor_color" />
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -347,8 +347,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro"
-                            android:contentDescription="@string/field_required"/>
+                            android:contentDescription="@string/field_required"
+                            android:src="@drawable/ic_erro" />
 
                         <TextView
                             android:id="@+id/cityErrorTV"
@@ -371,6 +371,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@color/white"
+                            android:contentDescription="@string/giftcard"
                             android:src="@drawable/ic_down"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/etlState"
@@ -379,8 +380,7 @@
                             app:layout_constraintTop_toTopOf="@+id/etlState"
                             app:layout_constraintVertical_bias="0.507"
                             app:layout_editor_absoluteX="336.24dp"
-                            app:layout_editor_absoluteY="26.28dp"
-                            android:contentDescription="@string/giftcard"/>
+                            app:layout_editor_absoluteY="26.28dp" />
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/etlState"
@@ -436,8 +436,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro"
-                            android:contentDescription="@string/field_required"/>
+                            android:contentDescription="@string/field_required"
+                            android:src="@drawable/ic_erro" />
 
                         <TextView
                             android:id="@+id/stateErrorTV"
@@ -497,8 +497,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro"
-                            android:contentDescription="@string/field_required"/>
+                            android:contentDescription="@string/field_required"
+                            android:src="@drawable/ic_erro" />
 
                         <TextView
                             android:id="@+id/zipErrorTV"
@@ -577,7 +577,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/save"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"/>
+                    android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -598,7 +598,7 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/remove_this_card"
                     android:textColor="@color/error_red"
-                    android:textSize="@dimen/_12ssp"/>
+                    android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
