--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,131 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@id/layoutMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:paddingLeft="30dp"
+    android:orientation="vertical"
+    android:paddingStart="30dp"
     android:paddingTop="@dimen/_45sdp"
-    android:paddingRight="@dimen/_22sdp"
+    android:paddingEnd="@dimen/_22sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.ForgotPasswordActivity">
 
-    <RelativeLayout
-        android:id="@+id/layoutClose"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:id="@+id/llClose"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgFPClose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_close"></ImageView>
-        </LinearLayout>
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/tvHead"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/layoutClose"
-        android:fontFamily="@font/opensans_bold"
-        android:text="Forgot Your Password?"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"></TextView>
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tvHead"
-        android:layout_marginTop="@dimen/_14sdp"
-        android:fillViewport="true"
-        android:scrollbars="none">
+        android:fitsSystemWindows="true"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/layoutClose"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/llClose"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imgFPClose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_close"></ImageView>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tvHead"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutClose"
+            android:fontFamily="@font/opensans_bold"
+            android:text="Forgot Your Password?"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp"></TextView>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tvMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:lineSpacingExtra="@dimen/_5sdp"
-                android:text="@string/forgot_content"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/_12ssp"></TextView>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etlEmail"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvMessage"
-                android:layout_marginTop="@dimen/_21sdp"
-                android:hint="@string/email"
-                android:textColorHint="@color/light_gray"
-                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
-                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
-                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
-                app:boxCornerRadiusTopStart="@dimen/_10sdp"
-                app:boxStrokeColor="@color/primary_green"
-                app:errorIconDrawable="@null"
-                app:hintTextColor="@color/primary_green">
+                android:layout_height="match_parent"
+                android:layout_above="@+id/cvNext"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:scrollbars="none">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etEmail"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints="creditCardSecurityCode"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
-                    android:fontFamily="@font/opensans_semibold"
-                    android:imeOptions="actionDone"
-                    android:inputType="textEmailAddress"
-                    android:maxLength="255"
-                    android:maxLines="1"
-                    android:padding="@dimen/_12sdp"
-                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                    android:singleLine="true"
-                    android:textColor="@color/text_color"
-                    android:textColorHint="@color/light_gray"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp" />
+                    android:layout_height="match_parent">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <TextView
+                        android:id="@+id/tvMessage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:lineSpacingExtra="@dimen/_5sdp"
+                        android:text="@string/forgot_content"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/_12ssp"></TextView>
 
-            <LinearLayout
-                android:id="@+id/layoutEmailError"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/etlEmail"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/etlEmail"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvMessage"
+                        android:layout_marginTop="@dimen/_21sdp"
+                        android:hint="@string/email"
+                        android:textColorHint="@color/light_gray"
+                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
+                        app:boxStrokeColor="@color/primary_green"
+                        app:errorIconDrawable="@null"
+                        app:hintTextColor="@color/primary_green">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_erro"></ImageView>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etEmail"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
+                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
+                            android:fontFamily="@font/opensans_semibold"
+                            android:imeOptions="actionDone"
+                            android:inputType="textEmailAddress"
+                            android:maxLength="255"
+                            android:maxLines="1"
+                            android:padding="@dimen/_12sdp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                            android:singleLine="true"
+                            android:textColor="@color/text_color"
+                            android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:textSize="@dimen/_12ssp" />
 
-                <TextView
-                    android:id="@+id/tvEmailError"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text=""
-                    android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/error_red"
-                    android:textSize="@dimen/text_size_14sp"></TextView>
-            </LinearLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <LinearLayout
+                        android:id="@+id/layoutEmailError"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/etlEmail"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_erro"></ImageView>
+
+                        <TextView
+                            android:id="@+id/tvEmailError"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text=""
+                            android:textColor="@color/error_red"
+                            android:textSize="@dimen/text_size_14sp"></TextView>
+                    </LinearLayout>
+
+                </RelativeLayout>
+            </ScrollView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvNext"
@@ -147,5 +160,8 @@
             </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
-    </ScrollView>
-</RelativeLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
