Bug fixes in Team feature and additional approve.

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -254,8 +254,8 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tvPasswordInfo"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:hint="Confirm Password"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                        android:hint="Confirm Password"
                         android:textColorHint="@color/light_gray"
                         app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                         app:boxCornerRadiusBottomStart="@dimen/_10sdp"
@@ -278,7 +278,6 @@
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
                             android:longClickable="false"
-                            android:textIsSelectable="false"
                             android:maxLength="12"
                             android:maxLines="1"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -286,8 +285,8 @@
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp"
-                            />
+                            android:textIsSelectable="false"
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
